<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/emergency_fund"
            android:icon="@drawable/ic_emergency_fund24dp"
            android:title="@string/emergencyFund" />
        <item
            android:id="@+id/expenses"
            android:icon="@drawable/ic_expenses24dp"
            android:title="@string/expenses" />
        <item
            android:id="@+id/financial_tips"
            android:icon="@drawable/ic_help24dp"
            android:title="@string/financialTips" />
        <item
            android:id="@+id/income"
            android:icon="@drawable/ic_income24dp"
            android:title="@string/income" />
        <item
            android:id="@+id/user_settings"
            android:icon="@drawable/ic_settings24dp"
            android:title="@string/userSettings" />
        <item
            android:id="@+id/student_fund"
            android:icon="@drawable/ic_student_fund24dp"
            android:title="@string/studentfund" />
        <item
            android:id="@+id/today"
            android:icon="@drawable/ic_today24dp"
            android:title="@string/today" />
        <item
            android:id="@+id/trends"
            android:icon="@drawable/ic_trends24dp"
            android:title="@string/trends" />


    </group>
</menu>