<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipDetailsFolder.CreditScoreTips">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:text="@string/creditintro"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="@string/credittip1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="@string/credittip2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="@string/credittip3"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="@string/credittip4"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:text="@string/credittip5"
            android:textSize="15sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>